[gd_scene load_steps=4 format=2]

[ext_resource path="res://sprites/fullpipe1.png" type="Texture" id=1]
[ext_resource path="res://sprites/fullpipe2.png" type="Texture" id=2]
[ext_resource path="res://UI/PipeGrabber.gd" type="Script" id=3]

[node name="PipeGrabber" type="Control"]
anchor_right = 0.304
anchor_bottom = 0.108
margin_right = -311.296
margin_bottom = -110.592
script = ExtResource( 3 )

[node name="ColorRect" type="ColorRect" parent="."]
margin_right = 311.0
margin_bottom = 111.0
color = Color( 0.407843, 0.819608, 0.772549, 1 )

[node name="ColorRect" type="ColorRect" parent="ColorRect"]
margin_left = 5.0
margin_top = 6.0
margin_right = 303.0
margin_bottom = 103.0
color = Color( 0.0784314, 0.415686, 0.427451, 1 )

[node name="Pipe1" type="Button" parent="ColorRect"]
margin_left = 36.5551
margin_top = 82.2137
margin_right = 115.555
margin_bottom = 102.214
text = "Pipe 1"

[node name="Pipe2" type="Button" parent="ColorRect"]
margin_left = 178.0
margin_top = 82.0
margin_right = 265.0
margin_bottom = 102.0
text = "Pipe 2"

[node name="Sprite" type="Sprite" parent="ColorRect"]
position = Vector2( 74, 51 )
rotation = 1.5708
scale = Vector2( 0.0521462, 0.112713 )
texture = ExtResource( 1 )

[node name="Sprite2" type="Sprite" parent="ColorRect"]
position = Vector2( 221.635, 49 )
rotation = 1.5708
scale = Vector2( 0.0552466, 0.124339 )
texture = ExtResource( 2 )

[node name="Button3" type="Button" parent="ColorRect"]
margin_right = 61.0
margin_bottom = 20.0
text = "Close"

[connection signal="pressed" from="ColorRect/Pipe1" to="." method="_on_Pipe1_pressed"]
[connection signal="pressed" from="ColorRect/Pipe2" to="." method="_on_Pipe2_pressed"]
